--- a/hackerstudent/src/main/res/layout/course_view_fragment.xml
+++ b/hackerstudent/src/main/res/layout/course_view_fragment.xml
@@ -47,6 +47,19 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
 
+
+                <ImageView
+                    android:id="@+id/share_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_margin="4dp"
+                    android:contentDescription="@string/frag_exp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_share"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
