--- a/app/src/main/res/layout/activity_podcast_webinar.xml
+++ b/app/src/main/res/layout/activity_podcast_webinar.xml
@@ -34,6 +34,16 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent">
 
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/bck_arrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="3dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_arrow"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/main_Image_Layout"
@@ -41,7 +51,7 @@
                     android:layout_height="250dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toBottomOf="@id/bck_arrow">
 
 
                     <ProgressBar
@@ -81,6 +91,7 @@
                             android:layout_centerInParent="true"
                             android:src="@drawable/ic_baseline_play_circle_filled_24" />
                     </RelativeLayout>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <WebView
@@ -90,7 +101,7 @@
                     android:layout_margin="4dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/bck_arrow" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
