--- a/app/src/main/res/layout/activity_story_play.xml
+++ b/app/src/main/res/layout/activity_story_play.xml
@@ -29,6 +29,16 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent">
 
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/bck_arrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="3dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_arrow"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/main_Image_Layout"
@@ -36,7 +46,7 @@
                     android:layout_height="250dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toBottomOf="@id/bck_arrow">
 
 
                     <ProgressBar
@@ -85,7 +95,7 @@
                     android:layout_margin="4dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/bck_arrow" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
