--- a/app/src/main/res/layout/ticket_list_item.xml
+++ b/app/src/main/res/layout/ticket_list_item.xml
@@ -72,6 +72,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginEnd="8dp"
+        android:rotationY="-180"
         android:src="@drawable/arrow"
         app:layout_constraintBottom_toBottomOf="@id/type_ticket"
         app:layout_constraintEnd_toEndOf="parent"
