--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -70,4 +70,7 @@
     <color name="video_inner_color_4">#e9dcef</color>
 
 
+    //FreeDemo Parenting
+    <color name="light_grey_color">#707070</color>
+
 </resources>
