--- a/app/src/main/res/layout/demo_video_content_layout.xml
+++ b/app/src/main/res/layout/demo_video_content_layout.xml
@@ -19,7 +19,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/main_constraint_holder"
                 android:layout_width="match_parent"
@@ -29,24 +28,13 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent">
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/bck_arrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:padding="3dp"
-                    android:src="@drawable/ic_arrow"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/main_Image_Layout"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/bck_arrow">
+                    app:layout_constraintTop_toTopOf="parent">
 
 
                     <ProgressBar
@@ -93,15 +81,26 @@
                     android:id="@+id/webView_player"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/bck_arrow" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/bck_arrow"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_keyboard_arrow_down"
+            android:tint="@color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/video_title"
@@ -171,11 +170,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabs"/>
-
-
-
-
+            app:layout_constraintTop_toBottomOf="@+id/tabs" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
