--- a/app/src/main/res/layout/free_demo_video_module_fragments.xml
+++ b/app/src/main/res/layout/free_demo_video_module_fragments.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.uptodd.uptoddapp.ui.freeparenting.content.tabs.FreeDemoVideoModuleFragments">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,7 +13,10 @@
             android:id="@+id/recycle_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:listitem="@layout/demo_module_item_layout"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:visibility="visible" />
 
 
         <TextView
@@ -21,12 +25,11 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:fontFamily="@font/montserrat"
+            android:scrollbars="vertical"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:visibility="gone"
-            android:scrollbars="vertical"
-            tools:text="fjdgkldfklj hfdgdlhgfh jgldfjkhlfdjklhjkl hghjfghfjkg hghjgfhklfjlk hghljfkg hjgfhjfghklflkj ghjgfhjgfhjlhg gffhlgfhlkhfg gjdfhjkdlf hjklfhlkghjkl hjgfjhlfghjkfl hgklfj"
-            tools:visibility="visible" />
+            tools:text="fjdgkldfklj hfdgdlhgfh jgldfjkhlfdjklhjkl hghjfghfjkg hghjgfhklfjlk hghljfkg hjgfhjfghklflkj ghjgfhjgfhjlhg gffhlgfhlkhfg gjdfhjkdlf hjklfhlkghjkl hjgfjhlfghjkfl hgklfj" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
