--- a/app/src/main/res/layout/demo_video_content_layout.xml
+++ b/app/src/main/res/layout/demo_video_content_layout.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/videoView_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,15 +18,17 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
+            <!-- Video Layout -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/main_constraint_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="250dp"
                 android:padding="10dp"
+                android:visibility="gone"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/main_Image_Layout"
@@ -89,16 +91,90 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- Music Layout -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/music_fragment_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="250dp"
+                android:padding="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        </LinearLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/main_music_Layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:background="@drawable/music_icon"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/play_music"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_centerInParent="true"
+                        android:background="@android:color/transparent"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/ic_baseline_play_circle_filled_24"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <TextView
+                        android:id="@+id/current_music_duration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="10:00"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent" />
+
+
+                    <SeekBar
+                        android:id="@+id/current_seek_bar"
+                        android:layout_width="0dp"
+                        android:layout_marginEnd="10dp"
+                        android:padding="3dp"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="@id/current_music_duration"
+                        app:layout_constraintLeft_toRightOf="@id/current_music_duration"
+                        app:layout_constraintRight_toLeftOf="@id/duration_music_duration" />
+
+
+                    <TextView
+                        android:id="@+id/duration_music_duration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="10:00"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/bck_arrow"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_margin="10dp"
-            android:contentDescription="close button"
             android:background="@android:color/transparent"
+            android:contentDescription="close button"
             android:scaleType="fitXY"
             android:src="@drawable/ic_keyboard_arrow_down"
             android:tint="@color/white"
@@ -129,8 +205,8 @@
             android:layout_height="48dp"
             android:layout_margin="13dp"
             android:background="@android:color/transparent"
-            android:padding="8dp"
             android:contentDescription="Customer Support"
+            android:padding="8dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_person_support"
             android:tint="@color/black"
@@ -148,7 +224,6 @@
             android:textSize="13sp"
             app:layout_constraintLeft_toLeftOf="@id/video_title"
             app:layout_constraintTop_toBottomOf="@id/video_title" />
-
 
 
         <androidx.viewpager2.widget.ViewPager2
