--- a/app/src/main/res/layout/demo_video_content_layout.xml
+++ b/app/src/main/res/layout/demo_video_content_layout.xml
@@ -33,7 +33,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/main_Image_Layout"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="250dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -53,7 +54,8 @@
                     <ImageView
                         android:id="@+id/videoThumbnail"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="250dp"
                         android:scaleType="centerCrop"
                         android:src="@drawable/app_icon"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -98,6 +100,7 @@
                 android:layout_height="wrap_content"
                 android:minHeight="250dp"
                 android:padding="10dp"
+                android:visibility="visible"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -105,7 +108,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/main_music_Layout"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="250dp"
                     android:background="@drawable/music_icon"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
