--- a/app/src/main/res/layout/free_demo_dashboard_screen_framgent.xml
+++ b/app/src/main/res/layout/free_demo_dashboard_screen_framgent.xml
@@ -200,7 +200,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/idealHeightTextView"
+                            android:id="@+id/profile_phone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
