--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,6 +57,8 @@
 
     <color name="video_container">#7ea8e7</color>
     <color name="video_inner_color">#d4e2f7</color>
+    <color name="video_inner_color_lighter">#E6EFFC</color>
+    <color name="video_inner_color_lighter_2">#A3C4F7</color>
 
     <color name="video_container_2">#e2b99c</color>
     <color name="video_inner_color_2">#f8eee7</color>
