--- a/app/src/main/res/layout/free_demo_video_module_fragments.xml
+++ b/app/src/main/res/layout/free_demo_video_module_fragments.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.uptodd.uptoddapp.ui.freeparenting.content.tabs.FreeDemoVideoModuleFragments">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,23 +14,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
-            android:visibility="gone"
-            tools:listitem="@layout/demo_module_item_layout"
+            android:visibility="visible"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/demo_module_item_layout"
             tools:visibility="visible" />
 
 
         <TextView
-            android:id="@+id/title_txt"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:id="@+id/loading_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:scrollbars="vertical"
             android:textColor="@color/black"
-            android:textSize="12sp"
-            android:visibility="gone"
-            tools:text="fjdgkldfklj hfdgdlhgfh jgldfjkhlfdjklhjkl hghjfghfjkg hghjgfhklfjlk hghljfkg hjgfhjfghklflkj ghjgfhjgfhjlhg gffhlgfhlkhfg gjdfhjkdlf hjklfhlkghjkl hjgfjhlfghjkfl hgklfj" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.3"
+            tools:text="gfdklgkl dfjlkhklg hjkgfhlkf" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
