--- a/app/src/main/res/layout/demo_module_item_layout.xml
+++ b/app/src/main/res/layout/demo_module_item_layout.xml
@@ -6,7 +6,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="7dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/module_title_layout"
@@ -18,17 +20,37 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:id="@+id/serial_no_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="1" />
+
+
+
+            <TextView
                 android:id="@+id/title_for_txt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/crimson_text_bold"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:gravity="center|start"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/serial_no_txt"
                 app:layout_constraintRight_toLeftOf="@id/arrow"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="testing file one te" />
+                tools:text="testing file one tegfjdklh jhklgfhhjkgljklgfjlkf gjkgfjklf jklgfjklgjgkgfkl" />
 
             <ImageButton
                 android:id="@+id/arrow"
