--- a/app/src/main/res/layout/demo_video_item_layout.xml
+++ b/app/src/main/res/layout/demo_video_item_layout.xml
@@ -19,6 +19,7 @@
             android:textColor="@color/black"
             android:textSize="14sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
@@ -29,10 +30,12 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawableTint="@color/black"
-            android:gravity="center_vertical"
+            app:drawableTint="@color/black"
+            android:gravity="center|start"
             android:minHeight="40dp"
             android:padding="8dp"
+            android:maxLines="2"
+            android:ellipsize="end"
             app:drawableEndCompat="@drawable/ic_baseline_play_circle_filled_24"
             app:layout_constraintLeft_toRightOf="@id/serial_no_txt"
             app:layout_constraintRight_toRightOf="parent"
