--- a/app/src/main/res/layout/demo_video_content_layout.xml
+++ b/app/src/main/res/layout/demo_video_content_layout.xml
@@ -109,8 +109,8 @@
                     android:id="@+id/main_music_Layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:minHeight="250dp"
                     android:background="@drawable/music_icon"
+                    android:minHeight="250dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -144,9 +144,9 @@
                     <SeekBar
                         android:id="@+id/current_seek_bar"
                         android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:padding="3dp"
-                        android:layout_height="wrap_content"
                         app:layout_constraintBottom_toBottomOf="@id/current_music_duration"
                         app:layout_constraintLeft_toRightOf="@id/current_music_duration"
                         app:layout_constraintRight_toLeftOf="@id/duration_music_duration" />
@@ -239,6 +239,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/by_uptodd_team" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/next_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_bg_horizontal_gradient"
+            android:minWidth="150dp"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
+            android:text="Next"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/viewPager"
+            app:layout_constraintLeft_toLeftOf="@id/viewPager"
+            app:layout_constraintRight_toRightOf="@id/viewPager"
+            app:layout_constraintTop_toTopOf="@id/viewPager"
+            app:layout_constraintVertical_bias=".9" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
